test(store): Controller테스트 리즈트 조회 에러 해결